Administracion para soluciones, fotos de soluciones. Administracion en clientes y aliados.

--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -257,3 +257,11 @@ hr {
 .soluciones .lista .item {
   height: 100%;
 }
+.soluciones .lista .item .galeria .caption {
+  display: none;
+}
+.soluciones .lista .ver_mas {
+  position: absolute;
+  right: 10px;
+  bottom: 0px;
+}
