--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -207,8 +207,14 @@ hr
 .background-white
   background-color white
 
-
 .soluciones
   .lista
     .item
       height 100%
+      .galeria
+        .caption
+          display none
+    .ver_mas
+      position absolute
+      right 10px
+      bottom 0px
