--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -51,6 +51,13 @@
 <script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
 
 <script src="https://maps.google.com/maps/api/js"></script>
+
+<script>
+    {% block final_scripts %}
+
+    {% endblock %}
+</script>
+
 </body>
 
 </html>
