--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1,5 +1,5 @@
 {% extends 'web/base/base.html' %}
-{% load static %}
+{% load static solo_tags %}
 
 {% block title %}
     Inicio
@@ -10,7 +10,8 @@
 {% endblock %}
 
 {% block cabezote %}
-    {% include 'web/base/cabezote.html' with titulo="ODECOPACK 2" texto="With supporting text below as a natural lead-in to additional content." imagen="https://cdn-images-1.medium.com/max/1920/1*8i_QS0FtL6vO181YaXApxg.jpeg" %}
+    {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
+    {% include 'web/base/cabezote.html' with titulo=index_configuracion.header_titulo texto=index_configuracion.header_text imagen=index_configuracion.header_imagen.url %}
 {% endblock %}
 
 {% block content %}
